force-app/main/default/objects/Vendor_Order_Receipt__c/Vendor_Order_Receipt__c.object-meta.xml
<CustomObject>
    <label>Vendor Order Receipt</label>
    <nameField>
        <displayFormat>RCP-{000000}</displayFormat>
        <label>Receipt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Order Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>