force-app/main/default/objects/Vendor_Order_Receipt__c/fields/Created_Inventory_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Created_Inventory_Transactions__c</fullName>
    <label>Created Inventory Transactions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>