force-app/main/default/objects/Vendor_Order_Receipt__c/fields/Discrepancy_Notes__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Notes__c</fullName>
    <label>Discrepancy Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>