force-app/main/default/objects/Vendor_Order_Receipt__c/fields/Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Date__c</fullName>
    <label>Receipt Date</label>
    <type>DateTime</type>
</CustomField>