force-app/main/default/objects/Vendor_Order_Receipt__c/fields/Received_By__c.field-meta.xml
<CustomField>
    <fullName>Received_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Received By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vendor_Order_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>