force-app/main/default/objects/Vendor_Order_Receipt__c/fields/Total_Items_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Items_Received__c</fullName>
    <label>Total Items Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>