force-app/main/default/objects/Vendor_Order_Receipt__c/fields/Vendor_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Vendor Order Receipts</relationshipLabel>
    <relationshipName>Vendor_Order_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>